tests/should_fail/bad_id.kt
fun bad_id() {
  // INVARIANT: (<VAL> | <VAR>) <ID>, this can be tested for easily
  // NOTE: need a way to look ahead one token and expect some value
  var "Thing" = 1011001
}
